[metadata]
name = indra_network_search
version = 1.0.0
description = INDRA Network Search
long_description = file: README.md
long_description_content_type = text/markdown
author = Klas Karis
author_email = klas_karis@hms.harvard.edu
url = https://github.com/indralab/indra_network_search
download_url = https://github.com/indralab/indra_network_search/releases
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    indra @ git+https://github.com/sorgerlab/indra.git
    indra_db @ git+https://github.com/indralab/indra_db.git
    pydantic
    fastapi
    networkx
    boto3
    requests
    flask
    numpy
    pandas
    pytrie
    pybel
    kappy
    paths-graph
    pygraphviz
    fnvhash
    autodoc_pydantic

include_package_data = True
python_requires = >=3.7

[options.extras_require]
tests =
    nose
