[metadata]
name = indra_network_search
version = 1.0.0
description = INDRA Network Search
long_description = file: README.md
long_description_content_type = text/markdown
author = Klas Karis
author_email = k.karis@northeastern.edu
url = https://github.com/indralab/indra_network_search
download_url = https://github.com/indralab/indra_network_search/releases
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    indra @ git+https://github.com/sorgerlab/indra.git
    indra_db @ git+https://github.com/indralab/indra_db.git
    fastapi<0.100.0
    pydantic!=1.8,!=1.8.1,<2.0.0,>=1.7.4
    networkx
    boto3
    requests
    flask
    numpy
    pandas
    pytrie
    pybel
    kappy
    paths-graph
    pygraphviz<=1.7
    fnvhash
    autodoc_pydantic

zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:

[options.extras_require]
tests =
    nose
